--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title> JDaniloC </title>
 
         <link href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles/responsive.css">
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/header.css">
         <link rel="stylesheet" href="styles/about.css">
@@ -13,9 +14,9 @@
         <link rel="stylesheet" href="styles/certificates.css">
         <link rel="stylesheet" href="styles/footer.css">
 
-        <script src="scripts/main.js"></script>
+        <script src="scripts/exibition.js"></script>
     </head>
-    <body>
+    <body onload="get_projects()">
         <header>
             <h2> J.Danilo Carmo </h2>
             <nav>
@@ -28,14 +29,23 @@
             <section id="about">
                 <h1> Quem sou eu </h1>
                 <img src="assets/perfil.png" align = "left" alt="perfil">
+                <p> Colocar animação e o link pra os certificados </p>
                 <p> 
-                    Fala man, qual a bronca? Hoje estou como aluno de ciência da computação no Centro de informática (CIn), na Universidade Federal de Pernambuco (UFPE), Brasil. Gosto de me desafiar com vários projetos sozinho durante as férias (ainda mais no tempo pandêmico ocorrido em 2020 E.C, que é o ano 0 PP, pós pandemia) para aprender e praticar as mais diversas tecnologias. <br>
-                    Além disso venho cultivando hobbies como a prática de desenhos (mas não sei pintar), games (apesar de jogar muito mal), violino e claro uma boa leitura (de assuntos relevantes, não me venha com livros da cultura pop). Entretanto conheço muito pouco sobre filmes, séries, animes e animações, ainda assim gostando de assistir no Youtube e cursos.
+                    Fala man, qual a bronca? Hoje estou como aluno de ciência da computação no Centro de informática (CIn), na Universidade Federal de Pernambuco (UFPE), Brasil. Gosto de me desafiar com vários projetos sozinho durante as férias (ainda mais no tempo pandêmico ocorrido em 2020 E.C, que é o ano 0 PP, pós pandemia) para aprender e praticar as mais diversas tecnologias. 
+                </p>
+                <p>
+                    Além disso venho cultivando hobbies como a prática de desenhos (mas não sei pintar), games (apesar de jogar muito mal), violino e claro uma boa leitura (de assuntos relevantes, não me venha com livros da cultura pop). Entretanto conheço muito pouco sobre filmes, séries, animes e animações, ainda assim gostando de assistir um bom vídeo no youtube ou um curso online.
                 </p>
             </section>
             <section id="projects">
                 <h1> Alguns dos meus projetos </h1>
                 <ul>
+                    <button onclick="handle_prev()">
+                        <img src="assets/icons/back.svg" alt="back icon">
+                    </button>
+                    <button class="next" onclick="handle_next()">
+                        <img src="assets/icons/next.svg" alt="next icon">
+                    </button>
                     <li>
                         <h2> 
                             <img src="https://img.shields.io/badge/-Python-black?style=flat&logo=python">
@@ -44,8 +54,12 @@
                             Bible Comment 
                         </h2>
                         <p> 
-                            Este é o meu projeto de fim de semanas do ano pandemico, no qual a motivação inicial foi de armazenar e compartilhar os meus próprios comentários biblicos. É o primeiro projeto React sozinho, me fazendo praticar essa questão além da conexão com MySql e certas CSS tricks. <br>
-                            Tive que criar o backend usando Express, mas não encontrei a tradução da bíblia que eu queria, então eu fiz um scrapy de um site para tal, além disso quebrei muita cabeça com deploy (heroku e netlify), migrations e domínio, mas valeu a pena. <br>
+                            Este é o meu projeto de fim de semanas do ano pandemico, no qual a motivação inicial foi de armazenar e compartilhar os meus próprios comentários biblicos. É o primeiro projeto React sozinho, me fazendo praticar essa questão além da conexão com MySql e certas CSS tricks. 
+                        </p>
+                        <p>
+                            Tive que criar o backend usando Express, mas não encontrei a tradução da bíblia que eu queria, então eu fiz um scrapy de um site para tal, além disso quebrei muita cabeça com deploy (heroku e netlify), migrations e domínio, mas valeu a pena. 
+                        </p>
+                        <p>
                             É o projeto que mais me preocupei com o visual, justamente por que meus amigos podem se beneficiar desse projeto, então sempre surge uma nova ideia, me fazendo aprender também que como o Python, o React tem várias soluções desenvolvidas pela comunidade sem a necessidade de inventar a roda.
                         </p>
                         <blockquote class="imgur-embed-pub" lang="en" data-id="a/6LXyDWh"  >
@@ -64,8 +78,12 @@
                             IQOption Bot 
                         </h2>
                         <p> 
-                            Este foi o projeto desenvolvido durante a pandemia, no qual se constitui como um automatizador de trades na plataforma IQ Option. Além de ter sido um grande passo em questão de interface desktop, se tornou o maior projeto escrito por mim até o fim de 2020 (sendo mais de 3k de linhas juntando o bot, bot do telegram, aplicação desktop entre outras coisas). <br>
-                            Utilizei meus conhecimentos de várias áreas, no qual é um bot do automatizador, um bot no telegram com botões, um banco de dados usando MongoDB para a computação de licenças e tudo isso rodando no Google Cloud. <br>
+                            Este foi o projeto desenvolvido durante a pandemia, no qual se constitui como um automatizador de trades na plataforma IQ Option. Além de ter sido um grande passo em questão de interface desktop, se tornou o maior projeto escrito por mim até o fim de 2020 (sendo mais de 3k de linhas juntando o bot, bot do telegram, aplicação desktop entre outras coisas). 
+                        </p>
+                        <p>
+                            Utilizei meus conhecimentos de várias áreas, no qual é um bot do automatizador, um bot no telegram com botões, um banco de dados usando MongoDB para a computação de licenças e tudo isso rodando no Google Cloud. 
+                        </p>
+                        <p>
                             Foi o primeiro projeto usando computação em núvem, no qual existe um script responsável pelo telegram que irá ser a interface do usuário, que é o mesmo que quando iniciado uma operação irá instanciar novas máquinas mantendo 5 usuários por máquina.
                         </p>
                         <blockquote class="imgur-embed-pub" lang="en" data-id="a/V4qQW6z"  >
@@ -89,8 +107,12 @@
                     <li>
                         <h2> <img src="https://img.shields.io/badge/-Java-black?style=flat&logo=java"> Pacman em Java </h2>
                         <p> 
-                            Este foi o segundo jogo feito, com o objetivo primário de ser apresentado como projeto da disciplina de introdução a programação, sendo realizado em equipe, porém acabou que tive que fazer sozinho durante as férias. <br>
-                            Um projeto interessante para se conhecer um pouco de como criar uma interface gráfica em java, além de criar uma estratégia diferente para cada inimigo, se utilizando de conhecimento de algorítmos como DFS e BFS. <br>
+                            Este foi o segundo jogo feito, com o objetivo primário de ser apresentado como projeto da disciplina de introdução a programação, sendo realizado em equipe, porém acabou que tive que fazer sozinho durante as férias. 
+                        </p>
+                        <p>
+                            Um projeto interessante para se conhecer um pouco de como criar uma interface gráfica em java, além de criar uma estratégia diferente para cada inimigo, se utilizando de conhecimento de algorítmos como DFS e BFS. 
+                        </p>
+                        <p>
                             Por fim foi interessante a questão de mapear imagens para os movimentos de cada personagem e a compilação o programa final podendo ser executado sem a necessidade do JDK.
                         </p>
                         <blockquote class="imgur-embed-pub" lang="en" data-id="a/N9Q0IKN" data-context="false" >
@@ -123,7 +145,9 @@
                     <li>
                         <h2> <img src="https://img.shields.io/badge/-Javascript-black?style=flat&logo=javascript"> TodoTxt puro </h2>
                         <p> 
-                            Este projeto por sua vez foi feito para treinar e aprender como desenvolver alguma aplicação usando HTML, CSS e JavaScript puro. <br>
+                            Este projeto por sua vez foi feito para treinar e aprender como desenvolver alguma aplicação usando HTML, CSS e JavaScript puro. 
+                        </p>
+                        <p>
                             Nele foi treinado vários conceitos do CSS que ainda não sabia fazer, como uma section fixada ou sobreposta as demais. Assim como implementações javascript + html, como o drag and drop e DOM.
                         </p>
                         <blockquote class="imgur-embed-pub" lang="en" data-id="a/8Krss5r"  >
@@ -141,7 +165,9 @@
                     <li>
                         <h2> <img src="https://img.shields.io/badge/-python-black?style=flat&logo=python"> <img src="https://img.shields.io/badge/-Javascript-black?style=flat&logo=javascript"> LCS para Diff </h2>
                         <p> 
-                            Não sou alguém muito interessado com competições. Mas entendo a importância de exercitar a mente para desenvolver algorítmos bem otimizados, dessa forma me interessei como acontece a comparação de commits no git, dessa forma corri atrás para aprender esses algorítmos. <br>
+                            Não sou alguém muito interessado com competições. Mas entendo a importância de exercitar a mente para desenvolver algorítmos bem otimizados, dessa forma me interessei como acontece a comparação de commits no git, dessa forma corri atrás para aprender esses algorítmos. 
+                        </p>
+                        <p>
                             Além do mais, na interface gráfica ousei por curiosidade usando Eel que é uma biblioteca que liga o script python com a web, podendo criar a interface usando HTML normal. E em outra página usei Brython que seria usar o Python como se fosse Javascript podendo renderizar até mesmo tags HTMl.
                         </p>
                         <blockquote class="imgur-embed-pub" lang="en" data-id="a/zVUbSZO"  >
@@ -181,8 +207,18 @@
                     Talvez esse espaço seja importante para alguns, para mais informações, ver Linkedin 
                 </p>
                 <ul>
-                    <embed src="assets/certificates/googlepython.pdf"  height="350">
-                    <embed src="assets/certificates/googleti.pdf" height="350">
+                    <li>
+                        <embed src="assets/certificates/googlepython.pdf"  height="350">
+                        <a href="https://coursera.org/share/da0817e4c386d28b04233f87f1bafab0">
+                            <img src="assets/icons/coursera.svg" alt="coursera icon">
+                        </a>
+                    </li>
+                    <li>
+                        <embed src="assets/certificates/googleti.pdf" height="350">
+                        <a href="https://coursera.org/share/ef55ac375928a9cd14eff651f8653972">
+                            <img src="assets/icons/coursera.svg" alt="coursera icon">
+                        </a>
+                    </li>
                 </ul>
             </section>
         </div>
