--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> JDaniloC </title>
-
+        
+        <link rel="icon" href="https://www.flaticon.com/svg/static/icons/svg/3533/3533600.svg" />
         <link href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/responsive.css">
         <link rel="stylesheet" href="styles/main.css">
